# poster-consistency-dinov3

./: .env.example  .gitignore  AGENTS.md  README.md  chat.md  pyproject.toml
docs/: 01-business-context.md  02-environment-setup.md  03-model-download.md  04-verification-script.md  05-roadmap.md  06-pitfalls.md  work-flow.md
